# reir

./: .gitmodules  CMakeLists.txt  NOTICE  README.md  design.md
doc/: IntermediateRepresentation.md
examples/: array_rewrite.rir  create_table.rir  emit_many.rir  emit_member.rir  empty_transaction.rir  fizbuz.rir  full_scan.rir  insert.rir  insert_many.rir  insert_scan.rir  loop.rir  loop_control.rir  many_insert.rir  print_int.rir  print_string.rir  random.rir  simple_assign.rir  table_create_drop.rir  tpcc.rir  tuple_array.rir  tuple_rewrite.rir
src/: CMakeLists.txt
src/reir/: CMakeLists.txt  reirc.cpp
src/reir/db/: CMakeLists.txt  attr_type.cpp  attr_type.hpp  attribute.cpp  attribute.hpp  maybe_value.hpp  metadata.cpp  metadata.hpp  schema.cpp  schema.hpp  value.cpp  value.hpp
src/reir/engine/: db_handle.cpp  db_handle.hpp  foedus_compiler.cpp  foedus_compiler.hpp  foedus_executor.cpp  foedus_executor.hpp  foedus_interface.cpp  foedus_interface.hpp  foedus_runner.cpp  foedus_runner.hpp
src/reir/exec/: CMakeLists.txt  ast_expression.hpp  ast_expression_codegen.cpp  ast_expression_parser.cpp  ast_node.cpp  ast_node.hpp  ast_node_parser.cpp  ast_statement.hpp  ast_statement_codegen.cpp  ast_statement_parser.cpp  compiler.cpp  compiler.hpp  compiler_context.cpp  compiler_context.hpp  db_interface.cpp  db_interface.hpp  debug.hpp  executor.cpp  executor.hpp  leveldb_compiler.cpp  leveldb_compiler.hpp  llvm_environment.hpp  llvm_util.cpp  llvm_util.hpp  memo.txt  parser.cpp  parser.hpp  reir_context.cpp  reir_context.hpp  storage.cpp  storage.hpp  token.hpp  tokenize.hpp  tuple.hpp
src/util/: blank.hpp  slice.hpp  slide.hpp
tests/: CMakeLists.txt  ast_exec_test.cpp  ast_expr_test.cpp  attr_type_test.cpp  attribute_test.cpp  cast_test.cpp  compiler_test.cpp  parser_test.cpp  schema_test.cpp  tokenizer_test.cpp
